computing all the edges

--- a/example/airline_routes.html
+++ b/example/airline_routes.html
@@ -126,7 +126,7 @@
                     max_y = Math.max(max_y, y);
                 }
 
-                for (var i = 0; i < 1000 /*raw_edges.length*/; i++) {
+                for (var i = 0; i < raw_edges.length; i++) {
                     eedges.push({
                         'source': raw_edges[i].getAttribute('source'),
                         'target': raw_edges[i].getAttribute('target')
