--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     </ul>
 
 
-    <h3>Example</h3>
-    <a href="./example/airline_routes.html">Air lines</a>
+    <h3>Examples</h3>
+    <a href="./example/airline_routes.html">US Air lines</a>
 
+    <h3>References</h3>
 
     <ul>
         [1] Cui, Weiwei, et al. "Geometry-based edge clustering for graph visualization." Visualization and Computer
